--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+ {% extends "layout.html" %} {% block content %}
+<h2>App Taller 2019 - 2020</h2>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>App</title>
-</head>
-
-<body>
-    <h2>App Taller 2019 - 2020</h2>
-</body>
-
-</html>
+{% endblock %}
