--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -20,6 +20,8 @@
 </head>
 
 <body>
+    {% include 'navbars/navbar.html' %}
+    <!--
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/">App Taller 2019 - 2020</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,6 +42,8 @@
             </ul>
         </div>
     </nav>
+
+-->
     <div class="container p-2">
         {% block content %} {% endblock %}
     </div>
