--- a/App/templates/usuario/usuarioGuardado.html
+++ b/App/templates/usuario/usuarioGuardado.html
@@ -3,7 +3,7 @@
 {% include 'header/header.html' %}
 
 <body>
-    {% if verificador == 0 %}
+    {% if verificador == [] %}
     <h2>Usuario dado de alta!</h2>
     {% else %}
     <h2>El usuario ya existe</h2>
