Se agrega la verificación de no existencia antes de dar de alta en ROL, TIPO DE PRODUCTO, MARCA Y PRODUCTO

--- a/App/templates/producto/productoGuardado.html
+++ b/App/templates/producto/productoGuardado.html
@@ -3,7 +3,11 @@
 {% include 'header/header.html' %}
 
 <body>
-    <h2> Producto dado de alta!</h2>
+    {% if verificador == [] %}
+    <h2>Producto dado de alta!</h2>
+    {% else %}
+    <h2>El producto ya existe</h2>
+    {% endif %}
 </body>
 
 </html>
