--- a/App/templates/marca/marcaGuardada.html
+++ b/App/templates/marca/marcaGuardada.html
@@ -3,7 +3,11 @@
 {% include 'header/header.html' %}
 
 <body>
-    <h2> Marca dada de alta!</h2>
+    {% if verificador == [] %}
+    <h2>Marca dada de alta!</h2>
+    {% else %}
+    <h2>La marca ya existe</h2>
+    {% endif %}
 </body>
 
 </html>
