--- a/App/templates/rol/rolGuardado.html
+++ b/App/templates/rol/rolGuardado.html
@@ -3,7 +3,11 @@
 {% include 'header/header.html' %}
 
 <body>
-    <h2> Rol dado de alta!</h2>
+    {% if verificador == [] %}
+    <h2>Rol dado de alta!</h2>
+    {% else %}
+    <h2>El rol ya existe</h2>
+    {% endif %}
 </body>
 
 </html>
