Modificacion de AMB

--- a/App/templates/ejemplar/listadoEjemplar.html
+++ b/App/templates/ejemplar/listadoEjemplar.html
@@ -5,7 +5,7 @@
 <body>
     <ul>
         {% for e in data %}
-        <li>{{ e[1] }}</li>
+        <li>Nro serie: {{ e[0] }}</li>
         {% endfor %}
     </ul>
 
