--- a/App/templates/ejemplar/modificarEjemplar.html
+++ b/App/templates/ejemplar/modificarEjemplar.html
@@ -20,8 +20,8 @@
                 <input type="text" class="form-control" name="nuevoVendido" id="nuevoVendido" placeholder="true or false">
             </div>
             <div class="form-group">
-                <label for="nuevoProcucto">Nuevo precio del producto</label>
-                <input type="number" class="form-control" name="nuevoProcucto" id="nuevoProcucto" placeholder="Ingresar el código del producto">
+                <label for="nuevoProducto">Nuevo id de producto</label>
+                <input type="number" class="form-control" name="nuevoProducto" id="nuevoProducto" placeholder="Ingresar el código del producto">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
