--- a/App/templates/tipoProducto/tipoProductoGuardado.html
+++ b/App/templates/tipoProducto/tipoProductoGuardado.html
@@ -4,10 +4,10 @@
 
 <body>
     {% if verificador == [] %}
-    <h2>Tipi de producto dado de alta!</h2>
+    <h2>Tipo de producto dado de alta!</h2>
     {% else %}
     <h2>El tipo de producto ya existe</h2>
-    {% endif %}s
+    {% endif %}
 </body>
 
 </html>
