--- a/App/templates/ejemplar_combo/modificarEjemplar_combo.html
+++ b/App/templates/ejemplar_combo/modificarEjemplar_combo.html
@@ -8,7 +8,7 @@
         <h2>Modificar Ejemplar_combo</h2>
         <form action="editarEjemplar_combo" method="POST">
             <div class="form-group">
-                <label for="idCombo">Nombre id de combo del ejemplar_combo o a modificar</label>
+                <label for="idCombo">Id de combo del ejemplar_combo a modificar</label>
                 <input type="number" class="form-control" name="idCombo" id="idCombo" placeholder="Ingresar el id del combo">
             </div>
             <div class="form-group">
@@ -16,7 +16,7 @@
                 <input type="text" class="form-control" name="numeroSerie" id="numeroSerie" placeholder="Ingresar el número de serie">
             </div>
             <div class="form-group">
-                <label for="nuevoIdCombo">Nuevo nombre id de combo del ejemplar_combo o a modificar</label>
+                <label for="nuevoIdCombo">Nuevo id de combo del ejemplar_combo a modificar</label>
                 <input type="number" class="form-control" name="nuevoIdCombo" id="nuevoIdCombo" placeholder="Ingresar el nuevo id del combo">
             </div>
             <div class="form-group">
