ABM y mostrar pago

--- a/App/templates/carrito/modificarCarrito.html
+++ b/App/templates/carrito/modificarCarrito.html
@@ -8,7 +8,7 @@
         <h2>Modificar Carrito</h2>
         <form action="editarCarrito" method="POST">
             <div class="form-group">
-                <label for="id">Nombre del rol a modificar</label>
+                <label for="id">Nombre del carrito a modificar</label>
                 <input type="text" class="form-control" name="id" id="id" placeholder="ingresar id del carrito">
             </div>
             <div class="form-group">
