Revision de AMB, correccion, inicio de armado de modelos

--- a/App/templates/combo/modificarCombo.html
+++ b/App/templates/combo/modificarCombo.html
@@ -16,7 +16,7 @@
                 <input type="text" class="form-control" name="nuevoNombre" id="nuevoNombre" placeholder="Ingresar nombre del combo">
             </div>
             <div class="form-group">
-                <label for="nuevoPrecio">Nuevo precio del combo</label>
+                <label for="nuevoPrecio">Nuevo precio total del combo</label>
                 <input type="number" class="form-control" name="nuevoPrecio" id="nuevoPrecio" placeholder="Ingresar el precio del combo">
             </div>
             <div class="form-group">
