--- a/App/templates/compra/bajaCompra.html
+++ b/App/templates/compra/bajaCompra.html
@@ -8,7 +8,7 @@
         <h2>Baja compra</h2>
         <form action="eliminarCompra" method="POST">
             <div class="form-group">
-                <label for="id">ID del carrito</label>
+                <label for="id">ID del Compra</label>
                 <input type="text" class="form-control" name="id" id="id" placeholder="ingresar el id del carrito">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
