--- a/App/templates/ejemplar_carrito/altaEjemplar_carrito.html
+++ b/App/templates/ejemplar_carrito/altaEjemplar_carrito.html
@@ -6,7 +6,7 @@
     {% include 'navbars/navbar.html' %}
     <div class="container p-2">
         <h2>Alta ejemplar-carrito</h2>
-        <form action="guardarEjemplar-carrito" method="POST">
+        <form action="guardarEjemplar_carrito" method="POST">
             <div class="form-group">
                 <label for="idCarrito">Id del carrito</label>
                 <input type="number" class="form-control" name="idCarrito" id="idCarrito" placeholder="Ingresar el id del carrito">
