--- a/App/templates/ejemplar_combo/altaEjemplar_combo.html
+++ b/App/templates/ejemplar_combo/altaEjemplar_combo.html
@@ -6,7 +6,7 @@
     {% include 'navbars/navbar.html' %}
     <div class="container p-2">
         <h2>Alta ejemplar-combo</h2>
-        <form action="guardarEjemplar-combo" method="POST">
+        <form action="guardarEjemplar_combo" method="POST">
             <div class="form-group">
                 <label for="idCombo">Id del combo</label>
                 <input type="number" class="form-control" name="idCombo" id="idCombo" placeholder="Ingresar el id del combo">
