--- a/App/templates/pago/altaPago.html
+++ b/App/templates/pago/altaPago.html
@@ -8,11 +8,11 @@
         <h2>alta pago</h2>
         <form action="guardarPago" method="POST">
             <div class="form-group">
-                <label for="id">Id de la compra</label>
-                <input type="number" class="form-control" name="id" id="id" placeholder="ingresar el id de la compra">
+                <label for="id">Id de la Compra</label>
+                <input type="number" class="form-control" name="idCompra" id="idCompra" placeholder="ingresar el id de la compra">
             </div>
             <div class="form-group">
-                <label for="total">Id de la compra</label>
+                <label for="total">Total de la pago</label>
                 <input type="number" class="form-control" name="total" id="total" placeholder="ingresar el total de la compra">
             </div>
             <div class="form-group">
