--- a/App/templates/combo/altaCombo.html
+++ b/App/templates/combo/altaCombo.html
@@ -12,8 +12,8 @@
                 <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingresar el nombre del combo">
             </div>
             <div class="form-group">
-                <label for="precio">Precio</label>
-                <input type="number" class="form-control" name="precio" id="precio" placeholder="Ingresar el precio del combo">
+                <label for="precio">Precio Total</label>
+                <input type="number" class="form-control" name="precioTotal" id="precioTotal" placeholder="Ingresar el precio del combo">
             </div>
             <div class="form-group">
                 <label for="descuento">Descuento</label>
@@ -22,7 +22,7 @@
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
-    
+
 </body>
 
 </html>
