--- a/App/templates/usuario/altaUsuario.html
+++ b/App/templates/usuario/altaUsuario.html
@@ -9,7 +9,7 @@
         <form action="guardarUsuario" method="POST">
             <div class="form-group">
                 <label for="nombreUsuario">Nombre del usuario</label>
-                <input type="text" class="form-control" name="nombreUsuario" id="nombreUSuario" placeholder="Ingresar el nombre del usuario">
+                <input type="email" class="form-control" name="nombreUsuario" id="nombreUSuario" placeholder="Ingresar el nombre del usuario">
             </div>
             <div class="form-group">
                 <label for="contrasenia">Contraseña</label>
