Modelo usuario -> Modificar usario

--- a/App/templates/usuario/bajaUsuario.html
+++ b/App/templates/usuario/bajaUsuario.html
@@ -9,7 +9,7 @@
         <form action="eliminarUsuario" method="POST">
             <div class="form-group">
                 <label for="nombre">Nombre del usuario</label>
-                <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingresar nombre del usuario">
+                <input type="email" class="form-control" name="nombre" id="nombre" placeholder="Ingresar nombre del usuario">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
