--- a/App/templates/usuario/usuarioModificado.html
+++ b/App/templates/usuario/usuarioModificado.html
@@ -3,7 +3,7 @@
 {% include 'header/header.html' %}
 
 <body>
-    {% if data == 1 %}
+    {% if data == [] %}
     <h2>Usuario Modificado!</h2>
     {% else %}
     <h2>Usuario No Existe!</h2>
