--- a/App/templates/usuario/modificarUsuario.html
+++ b/App/templates/usuario/modificarUsuario.html
@@ -9,11 +9,11 @@
         <form action="editarUsuario" method="POST">
             <div class="form-group">
                 <label for="nombre">Nombre del usuario a modificar</label>
-                <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingresar nombre del usuario">
+                <input type="email" class="form-control" name="nombre" id="nombre" placeholder="Ingresar nombre del usuario">
             </div>
             <div class="form-group">
                 <label for="nombreNuevo">Nuevo nombre del usuario</label>
-                <input type="text" class="form-control" name="nombreNuevo" id="nombreNuevo" placeholder="Ingresar el nuevo nombre del usuario">
+                <input type="email" class="form-control" name="nombreNuevo" id="nombreNuevo" placeholder="Ingresar el nuevo nombre del usuario">
             </div>
             <div class="form-group">
                 <label for="contraseniaNueva">Nueva contraseña del usuario</label>
