Modelo carrito --> ABMC

--- a/App/templates/carrito/mostrarCarrito.html
+++ b/App/templates/carrito/mostrarCarrito.html
@@ -5,7 +5,7 @@
 <body>
     <ul>
         {% for e in data %}
-        <li>{{ e[1] }}</li>
+        <li>ID Carrito: {{ e[0] }} - Total: {{ e[1] }}</li>
         {% endfor %}
     </ul>
 
