--- a/App/templates/rol/altaRol.html
+++ b/App/templates/rol/altaRol.html
@@ -5,7 +5,7 @@
 <body>
     {% include 'navbars/navbar.html' %}
     <div class="container p-2">
-        <h2>alta Rol</h2>
+        <h2>Alta Rol</h2>
         <form action="guardarRol" method="POST">
             <div class="form-group">
                 <label for="exampleInputEmail1">Nombre del rol</label>
