Modificacion de formularios, correccion de boton submit por aceptar y agregado de boton cancelar

--- a/App/templates/carrito/altaCarrito.html
+++ b/App/templates/carrito/altaCarrito.html
@@ -11,7 +11,8 @@
                 <label for="total">Total</label>
                 <input type="number" class="form-control" name="total" id="total" placeholder="ingresar el total">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Aceptar</button>
+			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
 
 
