--- a/App/templates/combo/altaCombo.html
+++ b/App/templates/combo/altaCombo.html
@@ -19,7 +19,8 @@
                 <label for="descuento">Descuento</label>
                 <input type="number" class="form-control" name="descuento" id="descuento" placeholder="Ingresar el descuento del combo">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Aceptar</button>
+			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
     </div>
 
