--- a/App/templates/combo/modificarCombo.html
+++ b/App/templates/combo/modificarCombo.html
@@ -23,7 +23,8 @@
                 <label for="nuevoDescuento">Nuevo descuento</label>
                 <input type="number" class="form-control" name="nuevoDescuento" id="nuevoDescuento" placeholder="Ingresar el descuento del combo">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Aceptar</button>
+			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
 
 
