--- a/App/templates/compra/modificarCompra.html
+++ b/App/templates/compra/modificarCompra.html
@@ -19,7 +19,8 @@
                 <label for="nuevoEstadoConfirmacion">Nuevo estado de confirmacion</label>
                 <input type="number" class="form-control" name="nuevoEstadoConfirmacion" id="nuevoEstadoConfirmacion" placeholder="ingresar el nuevo monto de la compra">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Aceptar</button>
+			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
 
 
