--- a/App/templates/ejemplar/altaEjemplar.html
+++ b/App/templates/ejemplar/altaEjemplar.html
@@ -19,7 +19,8 @@
                 <label for="producto">Producto</label>
                 <input type="number" class="form-control" name="producto" id="producto" placeholder="Ingresar el código del producto del ejemplar">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Aceptar</button>
+			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
     </div>
     
