--- a/App/templates/ejemplar/bajaEjemplar.html
+++ b/App/templates/ejemplar/bajaEjemplar.html
@@ -11,7 +11,8 @@
                 <label for="numeroSerie">Número de serie del ejemplar</label>
                 <input type="text" class="form-control" name="numeroSerie" id="numeroSerie" placeholder="Ingresar el número de serie del ejemplar">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Aceptar</button>
+			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
 
 
