--- a/App/templates/ejemplar/modificarEjemplar.html
+++ b/App/templates/ejemplar/modificarEjemplar.html
@@ -23,7 +23,8 @@
                 <label for="nuevoProducto">Nuevo id de producto</label>
                 <input type="number" class="form-control" name="nuevoProducto" id="nuevoProducto" placeholder="Ingresar el código del producto">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Aceptar</button>
+			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
 
 
