--- a/App/templates/ejemplar_carrito/modificarEjemplar_carrito.html
+++ b/App/templates/ejemplar_carrito/modificarEjemplar_carrito.html
@@ -23,7 +23,8 @@
                 <label for="nuevoNumeroSerie">Nuevo número de serie del producto del ejemplar_carrito a modificar</label>
                 <input type="text" class="form-control" name="nuevoNumeroSerie" id="nuevoNumeroSerie" placeholder="Ingresar el nuevo número de serie">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Aceptar</button>
+			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
 
 
