--- a/App/templates/pago/altaPago.html
+++ b/App/templates/pago/altaPago.html
@@ -27,7 +27,8 @@
                 <label for="cuotas">Cuotas</label>
                 <input type="number" class="form-control" name="cuotas" id="cuotas" placeholder="ingresar cantidad de cuotas">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Aceptar</button>
+			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
 
 
