--- a/App/templates/pago/modificarPago.html
+++ b/App/templates/pago/modificarPago.html
@@ -27,7 +27,8 @@
                 <label for="nuevoCuotas">Nuevo cuotas</label>
                 <input type="text" class="form-control" name="nuevoCuotas" id="nuevoCuotas" placeholder="ingresar las nuevas cuotas">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Aceptar</button>
+			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
 
 
