--- a/App/templates/producto/altaProducto.html
+++ b/App/templates/producto/altaProducto.html
@@ -35,7 +35,8 @@
                 <label for="marca">Marca del producto</label>
                 <input type="number" class="form-control" name="marca" id="marca" placeholder="Ingresar el código de la marca">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Aceptar</button>
+			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
     </div>
     
