--- a/App/templates/producto/modificarProducto.html
+++ b/App/templates/producto/modificarProducto.html
@@ -39,7 +39,8 @@
                 <label for="nuevaMarca">Nueva marca del producto</label>
                 <input type="number" class="form-control" name="nuevaMarca" id="nuevaMarca" placeholder="Ingresar el código de la marca">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Aceptar</button>
+			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
 
 
