--- a/App/templates/rol/modificarRol.html
+++ b/App/templates/rol/modificarRol.html
@@ -15,7 +15,8 @@
                 <label for="nombreNuevoRol">Nuevos Nombre del rol</label>
                 <input type="text" class="form-control" name="nombreNuevoRol" id="nombreNuevoRol" placeholder="ingresar nombre del rol">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Aceptar</button>
+			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
 
 
