--- a/App/templates/tipoProducto/altaTipoProducto.html
+++ b/App/templates/tipoProducto/altaTipoProducto.html
@@ -11,7 +11,8 @@
                 <label for="nombre">Nombre del tipo de producto</label>
                 <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingresar nombre del tipo">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Aceptar</button>
+			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
 
 
