--- a/App/templates/carrito/modificarCarrito.html
+++ b/App/templates/carrito/modificarCarrito.html
@@ -15,7 +15,8 @@
                 <label for="nuevoTotal">Nuevo total</label>
                 <input type="text" class="form-control" name="nuevoTotal" id="nuevoTotal" placeholder="ingresar el nuevo total">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Aceptar</button>
+			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
 
 
