--- a/App/templates/compra/altaCompra.html
+++ b/App/templates/compra/altaCompra.html
@@ -19,7 +19,8 @@
                 <label for="estadoConfirmacion">Estado de confirmacion</label>
                 <input type="number" class="form-control" name="estadoConfirmacion" id="estadoConfirmacion" placeholder="ingresar el estado de confirmacion">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Aceptar</button>
+			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
 
 
