--- a/App/templates/ejemplar_combo/bajaEjemplar_combo.html
+++ b/App/templates/ejemplar_combo/bajaEjemplar_combo.html
@@ -15,7 +15,8 @@
                 <label for="numeroSerie">Numero de serie</label>
                 <input type="text" class="form-control" name="numeroSerie" id="numeroSerie" placeholder="Ingresar el número de serie">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Aceptar</button>
+			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
 
 
