--- a/App/templates/marca/bajaMarca.html
+++ b/App/templates/marca/bajaMarca.html
@@ -11,7 +11,8 @@
                 <label for="nombre">Nombre de la marca</label>
                 <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingresar el nombre de la marca">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Aceptar</button>
+			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
 
 
