--- a/App/templates/marca/modificarMarca.html
+++ b/App/templates/marca/modificarMarca.html
@@ -15,7 +15,8 @@
                 <label for="nombreNuevo">Nuevo nombre de la marca</label>
                 <input type="text" class="form-control" name="nombreNuevo" id="nombreNuevo" placeholder="Ingresar nuevo nombre de la marca">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Aceptar</button>
+			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
 
 
