--- a/App/templates/pago/bajaPago.html
+++ b/App/templates/pago/bajaPago.html
@@ -11,7 +11,8 @@
                 <label for="id">ID del pago</label>
                 <input type="text" class="form-control" name="id" id="id" placeholder="ingresar el id del pago">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Aceptar</button>
+			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
 
 
