--- a/App/templates/rol/altaRol.html
+++ b/App/templates/rol/altaRol.html
@@ -11,7 +11,8 @@
                 <label for="exampleInputEmail1">Nombre del rol</label>
                 <input type="text" class="form-control" name="nombreRol" id="nombreRol" placeholder="ingresar nombre del rol">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Aceptar</button>
+			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
 
 
