--- a/App/templates/tipoProducto/modificarTipoProducto.html
+++ b/App/templates/tipoProducto/modificarTipoProducto.html
@@ -15,7 +15,8 @@
                 <label for="nombreNuevo">Nuevo nombre del tipo de producto</label>
                 <input type="text" class="form-control" name="nombreNuevo" id="nombreNuevo" placeholder="Ingresar el nuevo nombre del tipo de producto">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Aceptar</button>
+			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
 
 
