--- a/App/templates/usuario/altaUsuario.html
+++ b/App/templates/usuario/altaUsuario.html
@@ -19,7 +19,8 @@
                 <label for="contacto">Contacto</label>
                 <input type="text" class="form-control" name="contacto" id="contacto" placeholder="Ingresar los datos de contacto">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Aceptar</button>
+			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
 
 
