--- a/App/templates/usuario/bajaUsuario.html
+++ b/App/templates/usuario/bajaUsuario.html
@@ -11,7 +11,8 @@
                 <label for="nombre">Nombre del usuario</label>
                 <input type="email" class="form-control" name="nombre" id="nombre" placeholder="Ingresar nombre del usuario">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Aceptar</button>
+			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
 
 
