--- a/App/templates/usuario/modificarUsuario.html
+++ b/App/templates/usuario/modificarUsuario.html
@@ -23,7 +23,8 @@
                 <label for="contactoNuevo">Nuevo contacto del usuario</label>
                 <input type="text" class="form-control" name="contactoNuevo" id="contactoNuevo" placeholder="Ingresar el nuevo contacto del usuario">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Aceptar</button>
+			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
 
 
