--- a/App/templates/compra/altaCompra.html
+++ b/App/templates/compra/altaCompra.html
@@ -5,7 +5,7 @@
 <body>
     {% include 'navbars/navbar.html' %}
     <div class="container p-2">
-        <h2>alta compra</h2>
+        <h2>Alta compra</h2>
         <form action="guardarCompra" method="POST">
             <div class="form-group">
                 <label for="idCarrito">Id del carrito</label>
@@ -16,11 +16,11 @@
                 <input type="number" class="form-control" name="montoCompra" id="montoCompra" placeholder="ingresar el monto de la compra">
             </div>
             <div class="form-group">
-                <label for="estadoConfirmacion">Estado de confirmacion</label>
+                <label for="estadoConfirmacion">Estado de confirmacion (True:1 - False:0 )</label>
                 <input type="number" class="form-control" name="estadoConfirmacion" id="estadoConfirmacion" placeholder="ingresar el estado de confirmacion">
             </div>
             <button type="submit" class="btn btn-primary">Aceptar</button>
-			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
+            <a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
 
 
