--- a/App/templates/compra/modificarCompra.html
+++ b/App/templates/compra/modificarCompra.html
@@ -16,11 +16,11 @@
                 <input type="number" class="form-control" name="nuevoMontoCompra" id="nuevoMontoCompra" placeholder="ingresar el nuevo monto de la compra">
             </div>
             <div class="form-group">
-                <label for="nuevoEstadoConfirmacion">Nuevo estado de confirmacion</label>
+                <label for="nuevoEstadoConfirmacion">Nuevo estado de confirmacion (True:1 - False:0 )</label>
                 <input type="number" class="form-control" name="nuevoEstadoConfirmacion" id="nuevoEstadoConfirmacion" placeholder="ingresar el nuevo monto de la compra">
             </div>
             <button type="submit" class="btn btn-primary">Aceptar</button>
-			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
+            <a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
 
 
