--- a/App/templates/ejemplar/altaEjemplar.html
+++ b/App/templates/ejemplar/altaEjemplar.html
@@ -12,18 +12,18 @@
                 <input type="text" class="form-control" name="numeroSerie" id="numeroSerie" placeholder="Ingresar el número de serie del ejemplar">
             </div>
             <div class="form-group">
-                <label for="vendido">¿Producto vendido?</label>
+                <label for="vendido">¿Producto vendido? (0: False - 1:True)</label>
                 <input type="text" class="form-control" name="vendido" id="vendido" placeholder="true or false">
             </div>
             <div class="form-group">
-                <label for="producto">Producto</label>
+                <label for="producto">ID del Producto</label>
                 <input type="number" class="form-control" name="producto" id="producto" placeholder="Ingresar el código del producto del ejemplar">
             </div>
             <button type="submit" class="btn btn-primary">Aceptar</button>
-			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
+            <a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
     </div>
-    
+
 </body>
 
 </html>
