--- a/App/templates/producto/listadoProducto.html
+++ b/App/templates/producto/listadoProducto.html
@@ -5,7 +5,7 @@
 <body>
     <ul>
         {% for e in data %}
-        <li>{{ e[1] }}</li>
+        <li>ID:{{ e[0]}} - Producto:{{ e[1] }}</li>
         {% endfor %}
     </ul>
 
