--- a/App/templates/pago/altaPago.html
+++ b/App/templates/pago/altaPago.html
@@ -5,7 +5,7 @@
 <body>
     {% include 'navbars/navbar.html' %}
     <div class="container p-2">
-        <h2>alta pago</h2>
+        <h2>Alta de pago</h2>
         <form action="guardarPago" method="POST">
             <div class="form-group">
                 <label for="id">Id de la Compra</label>
@@ -16,7 +16,7 @@
                 <input type="number" class="form-control" name="total" id="total" placeholder="ingresar el total de la compra">
             </div>
             <div class="form-group">
-                <label for="estado">Estado de la compra</label>
+                <label for="estado">Estado del Pago (True:1 - False:0)</label>
                 <input type="number" class="form-control" name="estado" id="estado" placeholder="ingresar el estado de la compra">
             </div>
             <div class="form-group">
@@ -28,7 +28,7 @@
                 <input type="number" class="form-control" name="cuotas" id="cuotas" placeholder="ingresar cantidad de cuotas">
             </div>
             <button type="submit" class="btn btn-primary">Aceptar</button>
-			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
+            <a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
 
 
