--- a/App/templates/pago/modificarPago.html
+++ b/App/templates/pago/modificarPago.html
@@ -16,7 +16,7 @@
                 <input type="text" class="form-control" name="nuevoTotal" id="nuevoTotal" placeholder="ingresar el nuevo total">
             </div>
             <div class="form-group">
-                <label for="nuevoEstado">Nuevo estado</label>
+                <label for="nuevoEstado">Nuevo estado (True:1 - False:0)</label>
                 <input type="text" class="form-control" name="nuevoEstado" id="nuevoEstado" placeholder="ingresar el nuevo estado">
             </div>
             <div class="form-group">
@@ -28,7 +28,7 @@
                 <input type="text" class="form-control" name="nuevoCuotas" id="nuevoCuotas" placeholder="ingresar las nuevas cuotas">
             </div>
             <button type="submit" class="btn btn-primary">Aceptar</button>
-			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
+            <a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
 
 
