--- a/App/templates/carrito/altaCarrito.html
+++ b/App/templates/carrito/altaCarrito.html
@@ -5,14 +5,14 @@
 <body>
     {% include 'navbars/navbar.html' %}
     <div class="container p-2">
-        <h2>alta carrito</h2>
+        <h2>Alta carrito</h2>
         <form action="guardarCarrito" method="POST">
             <div class="form-group">
                 <label for="total">Total</label>
                 <input type="number" class="form-control" name="total" id="total" placeholder="ingresar el total">
             </div>
             <button type="submit" class="btn btn-primary">Aceptar</button>
-			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
+            <a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
 
 
