Estetica --> incorporacion de Bootwatch, pruebasa de sidebar

--- a/App/templates/header/header.html
+++ b/App/templates/header/header.html
@@ -4,7 +4,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>App Flask</title>
     <!--Bootstrap 4-->
+    <!--
     <link rel="stylesheet" href="{{ url_for('static', filename='lib/bootstrap-4.3.1/css/bootstrap.min.css') }}">
+    -->
+    <!--BootWatch-->
+    <link rel="stylesheet" href="{{ url_for('static', filename='lib/bootswatch/minty/bootstrap.min.css') }}">
 
     <!--CUSTOM CSS-->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
