--- a/App/templates/producto/altaProducto.html
+++ b/App/templates/producto/altaProducto.html
@@ -28,18 +28,18 @@
                 <input type="number" class="form-control" name="garantia" id="garantia" placeholder="Ingresar la garantía en meses">
             </div>
             <div class="form-group">
-                <label for="tipoProducto">Tipo de producto</label>
+                <label for="tipoProducto">ID de Tipo de producto</label>
                 <input type="number" class="form-control" name="tipoProducto" id="tipoProducto" placeholder="Ingresar el código del tipo de producto">
             </div>
             <div class="form-group">
-                <label for="marca">Marca del producto</label>
+                <label for="marca">ID de la Marca del producto</label>
                 <input type="number" class="form-control" name="marca" id="marca" placeholder="Ingresar el código de la marca">
             </div>
             <button type="submit" class="btn btn-primary">Aceptar</button>
-			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
+            <a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
     </div>
-    
+
 </body>
 
 </html>
