--- a/App/templates/producto/modificarProducto.html
+++ b/App/templates/producto/modificarProducto.html
@@ -32,15 +32,15 @@
                 <input type="number" class="form-control" name="nuevaGarantia" id="nuevaGarantia" placeholder="Ingresar la garantía en meses">
             </div>
             <div class="form-group">
-                <label for="nuevoTipoProducto">Nuevo tipo de producto</label>
+                <label for="nuevoTipoProducto">Nuevo ID de tipo de producto</label>
                 <input type="number" class="form-control" name="nuevoTipoProducto" id="nuevoTipoProducto" placeholder="Ingresar el código del tipo de producto">
             </div>
             <div class="form-group">
-                <label for="nuevaMarca">Nueva marca del producto</label>
+                <label for="nuevaMarca">Nuevo ID de la marca del producto</label>
                 <input type="number" class="form-control" name="nuevaMarca" id="nuevaMarca" placeholder="Ingresar el código de la marca">
             </div>
             <button type="submit" class="btn btn-primary">Aceptar</button>
-			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
+            <a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
 
 
